# demo-py

./: .releaserc.yml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
templates/: index.html
